# awive-configurator

./: .gitignore  Dockerfile  README.md  compose.yaml  config.example.json  pyproject.toml
awivec/: analyze_image.py  draw_gcp.py  from_distances.py  readCsv.py  run_awive.py  video.py
backend/: README.md
backend/app/: main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: process.py
frontend/: README.md  eslint.config.mjs
frontend/src/: App.js  App.tsx  HomeView.jsx  HomeView.tsx  OrthorectificationView.jsx  OrthorectificationView.tsx  PreCropView.jsx  PreCropView.tsx  RotationView.jsx  RotationView.tsx  index.js  index.tsx
frontend/src/ImagesContext/: index.jsx  index.tsx  useLocalStorage.tsx
frontend/src/components/features/DistanceDialog/: DistanceDialog.tsx
frontend/src/components/features/DistanceLine/: DistanceLine.tsx
frontend/src/components/features/GcpPoint/: GcpPoint.tsx
frontend/src/components/features/ImageControls/: ImageControls.tsx
frontend/src/components/layout/: AppHeader.tsx  TabLayout.tsx
frontend/src/components/pages/CropView/: CropView.tsx
frontend/src/components/pages/FinalView/: FinalView.tsx
frontend/src/components/pages/HomeView/: HomeView.tsx
frontend/src/components/pages/ImageCorrectionView/: ImageCorrectionView.tsx
frontend/src/components/pages/OrthorectificationView/: OrthorectificationView.tsx
frontend/src/components/pages/PreCropView/: PreCropView.tsx
frontend/src/components/pages/RiverProfileView/: RiverProfileView.tsx
frontend/src/constants/: api.ts  image.ts
frontend/src/contexts/images/: index.tsx  useLocalStorage.tsx
frontend/src/hooks/: useGcpManagement.ts  useImageScaling.ts  useImageUpload.ts  useTabNavigation.ts
frontend/src/theme/: AppTheme.jsx  AppTheme.tsx
frontend/src/types/: gcp.ts  image.ts  tabs.ts
frontend/src/views/HomeView/: HomeView.tsx
frontend/src/views/OrthorectificationView/: OrthorectificationView.tsx
frontend/src/views/PreCropView/: PreCropView.tsx
frontend/src/views/RotationView/: RotationView.tsx
(+4 files in other folders)
