[project]
name = "awive-configurator"
version = "0.1.0"
description = ""
authors = [{ name = "Joseph P.", email = "joseph.pena.q@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awive>=2.0.0",
    "npyplotter",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.uv.sources]
npyplotter = { git = "https://github.com/joseph-pq/npy-plotter.git" }
